Refactor all requests

--- a/templates/retrieve_data.plush.html
+++ b/templates/retrieve_data.plush.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pod Information</title>
 </head>
 <body>
 
-    <p>does it work?!</p>
+    <h1 class="centered"> <%= podName %></h1>
+    <h1 class="centered"> <%= namespace %></h1>
+    <h1 class="centered"> <%= hostIp %></h1>
+    <h1 class="centered"> <%= podIP %></h1>
+    <h1 class="centered"> <%= startTime %></h1>
+    <h1 class="centered"> <%= volumePodName %></h1>
+    <h1 class="centered"> <%= volumeName %></h1>
+    <h1 class="centered"> <%= volumeMount %></h1>
+    <h1 class="centered"> <%= cpuPodName %></h1>
+    <h1 class="centered"> <%= cpuUsage %></h1>
+    <h1 class="centered"> <%= memoryUsage %></h1>
+    <h1 class="centered"> <%= imageName %></h1>
+    <h1 class="centered"> <%= mountPath %></h1>
+    <h1 class="centered"> <%= configMapName %></h1>
+    <h1 class="centered"> <%= NodeName %></h1>
+    <h1 class="centered"> <%= nodeMemory %></h1>
+    <h1 class="centered"> <%= mdbPort %></h1>
+    <h1 class="centered"> <%= mExpressPort %></h1>
+    <h1 class="centered"> <%= cpsPort %></h1>
 </body>
 </html>
